--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "fanfou-api",
   "version": "1.1.1",
-  "description": "",
+  "description": "fanfou api for javascript and Node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "hmacsha1": "^1.0.0",
     "oauth-1.0a": "^2.1.1",
